# syslog-ng

lib/signal-slot-connector/: signal-slot-connector.h
testing-plugin/: test-plugin.c
testing-plugin/sources/generic/: CMakeLists.txt  Makefile.am  connector.c  connector.h  generic-grammar.ym  generic-parser.c  generic-parser.h  generic-plugin.c
tests/copyright/: policy
